--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       # Dependencies
       - name: Install dependencies
-        run: npm ci --include=dev
+        run: npm ci --legacy-peer-deps --include=dev
 
       # Check static typing and build
       - name: Build package
