--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-storybook": "build-storybook",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\"",
     "test": "vitest",
+    "test:ci": "vitest --reporter=verbose",
     "typecheck": "tsc --noEmit",
     "typecheck:watch": "tsc --watch --noEmit"
   },
@@ -44,7 +45,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/lodash.isequal": "4.5.6",
     "@types/lodash.merge": "4.6.7",
-    "@types/react": "18.0.26",
+    "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@vitejs/plugin-react-swc": "3.0.1",
     "date-fns": "2.29.3",
