--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "timeline",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "type": "module",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*",
@@ -10,8 +11,8 @@
   ],
   "scripts": {
     "build": "npx rimraf ./dist && tsc && sass src/timeline.scss dist/timeline.css",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\"",
     "test": "vitest",
     "test:ci": "vitest --reporter=verbose",
@@ -24,30 +25,30 @@
   "dependencies": {
     "classnames": "2.3.2",
     "interactjs": "1.10.17",
-    "lodash.isequal": "4.5.0",
-    "lodash.merge": "4.6.2",
+    "lodash-es": "4.17.21",
     "memoize-one": "6.0.0",
     "ts-pattern": "4.1.3"
   },
   "peerDependencies": {
+    "date-fns": ">=2.29.3",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.5.15",
-    "@storybook/addon-essentials": "6.5.15",
-    "@storybook/addon-interactions": "6.5.15",
-    "@storybook/addon-links": "6.5.15",
-    "@storybook/react": "6.5.15",
+    "@storybook/addon-essentials": "7.0.0-beta.31",
+    "@storybook/addon-interactions": "7.0.0-beta.31",
+    "@storybook/addon-links": "7.0.0-beta.31",
+    "@storybook/blocks": "7.0.0-beta.31",
+    "@storybook/react": "7.0.0-beta.31",
+    "@storybook/react-vite": "7.0.0-beta.31",
     "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/lodash.isequal": "4.5.6",
-    "@types/lodash.merge": "4.6.7",
+    "@types/lodash-es": "4.17.6",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "@vitejs/plugin-react-swc": "3.0.1",
+    "@vitejs/plugin-react": "3.0.1",
     "date-fns": "2.29.3",
     "jsdom": "21.0.0",
     "prettier": "2.8.3",
@@ -55,10 +56,9 @@
     "react-dom": "18.2.0",
     "rimraf": "2.6.2",
     "sass": "1.57.1",
-    "storybook-addon-sass-postcss": "0.1.3",
-    "ts-node": "10.9.1",
+    "storybook": "7.0.0-beta.31",
     "typescript": "4.9.4",
     "vite": "4.0.4",
-    "vitest": "0.27.2"
+    "vitest": "0.27.3"
   }
 }
