refactor: add linter and fix linting errors

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "src/**/*"
   ],
   "scripts": {
-    "build": "npx rimraf ./dist && tsc && sass src/timeline.scss dist/timeline.css",
-    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "build": "npx rimraf ./dist && tsc && sass src/timeline.scss dist/timeline.css",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\"",
+    "lint": "eslint src --ignore-path .eslintignore",
+    "storybook": "storybook dev -p 6006",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ci": "vitest --reporter=verbose",
@@ -49,9 +50,16 @@
     "@types/lodash-es": "4.17.6",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "3.0.1",
     "@vitest/coverage-c8": "0.28.2",
     "date-fns": "2.29.3",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "21.1.0",
     "prettier": "2.8.3",
     "react": "18.2.0",
