--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,13 @@
   "additionalBranchPrefix": "{{parentDir}}-",
   "automerge": true,
   "automergeType": "branch",
-  "extends": ["config:base", "group:allNonMajor", "schedule:monthly", ":pinDependencies"],
+  "extends": [
+    "config:base",
+    "group:allNonMajor",
+    "schedule:monthly",
+    ":pinDependencies",
+    "group:typescript-eslintMonorepo"
+  ],
   "labels": ["chore", "dependencies"],
   "semanticCommits": "enabled",
   "separateMajorMinor": false,
