Revert "refactor: add linter and fix linting errors"
This partially reverts commit 51d2b35bd772554cb19992c3ba9a715c9813fc1c.

--- a/renovate.json
+++ b/renovate.json
@@ -2,13 +2,7 @@
   "additionalBranchPrefix": "{{parentDir}}-",
   "automerge": true,
   "automergeType": "branch",
-  "extends": [
-    "config:base",
-    "group:allNonMajor",
-    "schedule:monthly",
-    ":pinDependencies",
-    "group:typescript-eslintMonorepo"
-  ],
+  "extends": ["config:base", "group:allNonMajor", "schedule:monthly", ":pinDependencies"],
   "labels": ["chore", "dependencies"],
   "semanticCommits": "enabled",
   "separateMajorMinor": false,
