--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,19 @@
-name: CI
+name: Release
 
 on:
   push:
     branches:
       - main
-      - development
-  pull_request:
-    branches:
-      - main
-      - development
 
 jobs:
-  build_and_test:
-    if: startsWith(github.head_ref, 'renovate') == false
+  release:
+    name: Release
     runs-on: ubuntu-latest
-    timeout-minutes: 5
-
+    timeout-minutes: 10
     steps:
-      # Setup workflow
-      - uses: actions/checkout@v3
-      - name: Use Node.js
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
@@ -35,14 +29,11 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      # Dependencies
       - name: Install dependencies
         run: npm ci --legacy-peer-deps --include=dev
-
-      # Check static typing and build
-      - name: Build package
-        run: npm run build
-
-      # Run unit tests
-      - name: Unit tests
-        run: npm run test:ci
+      - name: Release
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run semantic-release
