--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "format": "prettier --write \"./**/*.{ts,tsx,json}\"",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
+    "semantic-release": "semantic-release",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ci": "vitest --reporter=verbose",
@@ -61,6 +64,16 @@
     "react-component",
     "timeline"
   ],
+  "bugs": {
+    "url": "https://github.com/florianbepunkt/timeline/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/florianbepunkt/timeline"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@florianbepunkt"
+  },
   "dependencies": {
     "classnames": "2.3.2",
     "interactjs": "1.10.17",
@@ -74,28 +87,33 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "6.0.2",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "9.0.2",
+    "@semantic-release/release-notes-generator": "10.0.3",
     "@storybook/addon-essentials": "7.0.0-beta.31",
     "@storybook/addon-interactions": "7.0.0-beta.31",
     "@storybook/addon-links": "7.0.0-beta.31",
     "@storybook/blocks": "7.0.0-beta.31",
-    "@storybook/react": "7.0.0-beta.31",
     "@storybook/react-vite": "7.0.0-beta.31",
+    "@storybook/react": "7.0.0-beta.31",
     "@storybook/testing-library": "0.0.13",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/lodash-es": "4.17.6",
-    "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/react": "18.0.27",
     "@vitejs/plugin-react": "3.0.1",
     "@vitest/coverage-c8": "0.28.3",
     "date-fns": "2.29.3",
     "jsdom": "21.1.0",
     "prettier": "2.8.3",
-    "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react": "18.2.0",
     "rimraf": "2.6.2",
     "sass": "1.57.1",
+    "semantic-release": "20.0.2",
     "storybook": "7.0.0-beta.31",
     "typescript": "4.9.4",
     "vite": "4.0.4",
