--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,14 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      # Dependencies
       - name: Install dependencies
         run: npm ci --legacy-peer-deps --include=dev
+
+      # Run unit tests
+      - name: Unit tests
+        run: npm run test:ci
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
