--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "additionalBranchPrefix": "{{parentDir}}-",
-  "automerge": true,
+  "automerge": false,
   "automergeType": "branch",
   "extends": ["config:base", "group:allNonMajor", "schedule:monthly", ":pinDependencies"],
   "labels": ["chore", "dependencies"],
